# CoworkEvalAgent

./: .gitignore  README.md  工业报告.md  🚀 业务与规则补充契约：CoworkEval 核心业务流转规范.md  🚀 架构级系统蓝图：CoworkEval 智能体评测基座 (解耦重构版).md
backend/: .env.example  coworkeval.sh  pyproject.toml
backend/sample_data/: manifest.json
backend/sample_data/idle_resource-0012/: prompt.txt
backend/sample_data/network_perf-0010/: prompt.txt
backend/sample_data/pr_checker-0007/: prompt.txt
backend/sample_data/project_business_analysis-0001/: prompt.txt
backend/sample_data/references/: expected_output.xlsx
backend/sample_data/site_planning-0005/: prompt.txt
backend/sample_data/traces/: alarm_analysis-0003.jsonl  alarm_analysis-0003_baseline_no_skill.jsonl  alarm_with_skill.jsonl  claude_code_live_session.jsonl  eval_data_gen_baseline.jsonl  idle_resource-0012.jsonl  incomplete_trace.jsonl  network_perf-0010.jsonl  pr_checker-0007.jsonl  project_business_analysis-0001.jsonl  site_planning-0005.jsonl  valid_trace.jsonl
backend/src/: cli.py  main.py
backend/src/api/: comparison.py  experiments.py  manifests.py  meta.py  router.py  runs.py  scores.py  websocket.py
backend/src/core/: exceptions.py  interfaces.py  schemas.py  state_machine.py
backend/src/evaluator/: result_comparator.py
backend/src/infrastructure/: claude_code_adapter.py  database.py  llm_gateway.py  sandbox.py  trace_parser.py
backend/src/repositories/: judge_result_repository.py  manifest_repository.py  run_repository.py  score_repository.py
backend/tests/: conftest.py  test_ab_comparison.py  test_main.py
(+101 files in other folders)
