[project]
name = "coworkeval"
version = "0.1.0"
description = "Agent evaluation harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "openai>=1.50.0",
    "pandas>=2.0",
    "openpyxl>=3.1.0",
    "websockets>=12.0",
    "click>=8.4.1",
]

[project.scripts]
coworkeval = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
